--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <header>
        <!--Menu-->
             <a href="#contato" id="voltar">Contato</a>
-            <a href="#">Distribuidor</a>
-            <a href="#">Produtor</a>
+            <a href="./cadastro-distribuicao.html">Distribuidor</a>
+            <a href="./cadastro-produtores.html">Produtor</a>
             <a href="./cadastro-coletor.html">Coletor</a>
-            <a href="#">Voluntário</a>
+            <a href="./cadastro-voluntario.html">Voluntário</a>
             <button><a href="#">Administrador</a></button>
         
           
-          <a href="#">Entre ou cadastre-se</a>
+          <a href="./login.html">Entre ou cadastre-se</a>
     </header>
 
     <main>
