--- a/cadastro-distribuicao.html
+++ b/cadastro-distribuicao.html
@@ -70,9 +70,21 @@
                 <label for="estado">Estado</label>
             </div>
         </div>
-        <div class="row">
-            <button>Cadastrar</button> 
+
+        <!--modal com mensagem-->
+        <div class="w3-container">
+            <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Cadastra</button>
+
+            <div id="id01" class="w3-modal">
+                <div class="w3-modal-content">
+                <div class="w3-container">
+                    <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
+                    <p>Agora que o cadastro está feito, iremos entrar em contato através do Email.</p>
+                </div>
+                </div>
+            </div>
         </div>
+        
     </main>
 
     <footer>
