--- a/cadastro-produtores.html
+++ b/cadastro-produtores.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/cadastro-produtor.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Sítio Social</title>
 </head>
@@ -15,27 +16,28 @@
 
     <main>
 
-        <button><a href="./index.html">Voltar para página inicial</a></button>
+
+    <div class="container">
+        <img src="./img/cadastros/produtor.png" id="img-produtor">
 
     <!--formulario-->
-    <h3>Cadastro do produtor</h3>
+    <h3 id="titulo-verde">Produtor</h3>
         <div class="row">
             <div class="inputbox">
-                <input type="text" id="nome" required placeholder="Nome completo">
-                <label for="nome">Nome</label>
+                <input type="text" id="input-verde-nome" required placeholder="Nome completo">
+                <label for="nome" id="label-verde-nome">Nome</label>
             </div>
             <div class="inputbox">
-                <input type="email" id="email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
-                <label for="email">Email</label>
+                <input type="email" id="input-verde-email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
+                <label for="email" id="label-verde-email">Email</label>
                 <span id="error-email"></span>
             </div>
             <div class="inputbox">
-                <input type="text" id="telefone"  required placeholder="(XX)XXXXX-XXXX">
-                <label for="tel">Telefone</label>
+                <input type="text" id="input-verde-telefone"  required placeholder="(XX)XXXXX-XXXX">
+                <label for="tel" id="label-verde-telefone">Telefone</label>
             </div>
             <div class="inputbox">
-                <input type="text" id="Tipo de Alimento:"  required placeholder="Fruta, Legume e Vegatais">
-                <label for="alimento">Tipo de alimento</label>
+                <label for="alimento" id="label-verde-alimento">Alimento</label>
                     <select id="alimento" name="alimento">
                     <option value="frutas">Frutas</option>
                     <option value="legumes">Legumes</option>
@@ -43,70 +45,35 @@
                     </select>
             </div>
             <div class="inputbox">
-                <input type="text" id="quantidade"  required placeholder="(XX)XXXXX-XXXX">
-                <label for="quantidade">Quantidade</label>
+                <input type="text" id="input-verde-cpf" required placeholder="XXX.XXX.XXX-XX">
+                <label for="cpf" id="label-verde-cpf">CPF</label>
             </div>
             <div class="inputbox">
-                <input type="text" id="cpf" required placeholder="XXX.XXX.XXX-XX">
-                <label for="cpf">CPF</label>
+                <input type="text" id="input-verde-cnpj" required placeholder="XXXX.XXX.XXX/0001-XX">
+                <label for="cnpj" id="label-verde-cnpj">CNPJ</label>
             </div>
             <div class="inputbox">
-                <input type="text" id="cnpj" required placeholder="XXXX.XXX.XXX/0001-XX">
-                <label for="cnpj">CNPJ</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="disponibilidade" required placeholder="Disponibilidade">
-                <label for="disponibilidade">Disponibilidade</label>
+                    <label for="disponibilidade" id="label-verde-disponibilidade">Disponibilidade</label>
+                        <select id="disponibilidade" name="disponibilidade">
+                        <option value="frutas">Manhã</option>
+                        <option value="legumes">Tarde</option>
+                        <option value="Ambos">Noite</option>
+                        </select>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="inputbox">
-                <input type="text" id="cep" required placeholder="CEP">
-                <label for="cep">CEP</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="endereco"  required placeholder="Endereço">
-                <label for="endereco">Endereço</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="complemento" required placeholder="Quadra, Bloco, n Apto">
-                <label for="complemento">Complemento</label>
+                <input type="text" id="input-verde-cep" required placeholder="CEP">
+                <label for="cep" id="label-verde-cep">CEP</label>
             </div>
         </div>
-        <div class="row">
-            <div class="inputbox">
-                <input type="text" id="bairro" required placeholder="Bairro">
-                <label for="bairro">Bairro</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="cidade"  required placeholder="Cidade">
-                <label for="cidade">Cidade</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="estado" required placeholder="Estado">
-                <label for="estado">Estado</label>
-            </div>
-        </div>
-       
-        <!--modal com mensagem-->
-        <div class="w3-container">
-            <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-black">Cadastra</button>
-
-            <div id="id01" class="w3-modal">
-                <div class="w3-modal-content">
-                <div class="w3-container">
-                    <span onclick="document.getElementById('id01').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-                    <p>Agora que o cadastro está feito, iremos entrar em contato através do Email.</p>
-                </div>
-                </div>
-            </div>
-        </div>
-        
+        <button id="botao-verde"><a href="./index.html">Criar Cadastro</a></button>
+    </div>
     </main>
 
     <footer>
-    <!--rodape-->
-
+   
     </footer>
 
     <!--script-->
