Adicionando seta para voltar a pág. inicial

--- a/cadastro-produtores.html
+++ b/cadastro-produtores.html
@@ -10,8 +10,9 @@
     <title>Sítio Social</title>
 </head>
 <body>
+
     <header>
-        <!--cabeçalho-->
+        <a href="index.html" id="volta-pag"><img src="./img/cadastros/seta-esquerda (2).png" alt="Voltar para a página inicial"></a>
     </header>
 
     <main>
