--- a/cadastro-voluntario.html
+++ b/cadastro-voluntario.html
@@ -5,46 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/cadastro-voluntario.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Sítio Social</title>
 </head>
 <body>
     <header>
-        <!--cabeçalho-->
+        <a href="index.html" id="volta-pag"><img src="./img/cadastros/seta-esquerda.png" alt="Voltar para a página inicial"></a>
     </header>
 
     <main>
 
-        <button><a href="./index.html">Voltar para página inicial</a></button>
-
     <!--formulario-->
-    <h3>Cadastro do voluntário</h3>
+    <div class="container-azul">
+        <img src="./img/cadastros/voluntario.png" id="img-voluntario">   
+
+    <h3 id="titulo-azul">Voluntário</h3>
         <div class="row">
             <div class="inputbox">
-                <input type="text" id="nome" required placeholder="Nome completo">
-                <label for="nome">Nome</label>
+                <input type="text" id="input-azul-nome" required placeholder="Nome completo">
+                <label for="nome" id="label-azul-nome">Nome</label>
             </div>
             <div class="inputbox">
-                <input type="email" id="email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
-                <label for="email">Email</label>
+                <input type="email" id="input-azul-email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
+                <label for="email" id="label-azul-email">Email</label>
                 <span id="error-email"></span>
             </div>
             <div class="inputbox">
-                <input type="text" id="telefone"  required placeholder="(XX)XXXXX-XXXX">
-                <label for="tel">Telefone</label>
+                <input type="text" id="input-azul-telefone"  required placeholder="(XX)XXXXX-XXXX">
+                <label for="tel" id="label-azul-telefone">Telefone</label>
             </div>
             <div class="inputbox">
-                <input type="text" id="disponibilidade" required placeholder="Disponibilidade">
-                <label for="disponibilidade">Disponibilidade</label>
+                <label for="disponibilidade" id="label-azul-disponibilidade">Disponibilidade</label>
+                    <select name="disponibilidade-azul" id="disponibilidade-azul">
+                    <option value="frutas">Manhã</option>
+                    <option value="legumes">Tarde</option>
+                    <option value="Ambos">Noite</option>
+                    </select>
             </div>
         </div>
         <div class="row">
             <div class="inputbox">
-                <input type="text" id="cep" required placeholder="CEP">
-                <label for="cep">CEP</label>
+                <input type="text" id="input-azul-cep" required placeholder="CEP">
+                <label for="cep" id="label-azul-cep">CEP</label>
             </div>
         </div>
-       
+        <button id="botao-azul"><a href="./index.html">Criar Cadastro</a></button>
+       </div>
     </main>
 
     <footer>
