Removendo itens que não usaremos

--- a/index.html
+++ b/index.html
@@ -9,66 +9,24 @@
     <link rel="stylesheet" href="./css/whats.css">
     <link rel="stylesheet" href="./css/contato.css">
     <link rel="stylesheet" href="./css/carousel-automatico.css">
-    <link rel="stylesheet" href="./css/carousel-setas.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Sítio Social</title>
 </head>
 
 <body>
     <header>
-       <!--Menu-->
-            <a href="#contato" id="voltar">Contato</a>
-            <a href="./cadastro-distribuicao.html">Distribuidor</a>
-            <a href="./cadastro-produtores.html">Produtor</a>
-            <a href="./cadastro-coletor.html">Coletor</a>
-            <a href="./cadastro-voluntario.html">Voluntário</a>
-            <button><a href="#">Administrador</a></button>
-        
-          
-          <a href="./login.html">Entre ou cadastre-se</a>
+      <img src="./img/pag-home/banner.png" alt="" id="banner">
     </header>
 
     <main>
-        <!--Historia-->
-        <img src="./img/pag-home/021fd35f-6ff7-4b05-91a3-16cb3403aa22.jpeg" alt="" srcset="">
-            <section class="sobre__texto">
-                <h2>História da nossa Instituição</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Consectetur officia magni laboriosam. Vel fugit dolores iusto, amet adipisci, 
-                nostrum ipsam quisquam quae temporibus, qui doloremque obcaecati in ut maiores magnam.
-                Vel fugit dolores iusto, amet adipisci, 
-                nostrum ipsam quisquam quae temporibus, qui doloremque obcaecati in ut maiores magnam.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nemo magnam quidem pariatur impedit sunt, 
-                suscipit harum perferendis, atque reiciendis labore recusandae asperiores minima praesentium ea molestiae explicabo tempora rem.
-                </p>
-
-                <p>
-                    Curabitur facilisis dui in dui bibendum, a pretium massa auctor. 
-                    Sed nec dui id dui lobortis auctor vel eu lorem. 
-                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                    Nam condimentum leo dolor, quis porta dui lacinia dignissim. Ut vel tortor sed ligula tincidunt vulputate. 
-                    Maecenas aliquam enim vitae libero rhoncus laoreet. Aliquam risus augue, ullamcorper egestas bibendum nec, auctor eget erat. 
-                    Nulla facilisi. Nam sit amet volutpat nisi, a pellentesque tortor. 
-                    Suspendisse potenti. Mauris luctus elementum gravida.
-                </p>
-
-                <p>
-                    Duis sit amet nisl vel ex placerat tincidunt in ac urna. 
-                    Pellentesque et erat et mauris feugiat porttitor id ut nulla. 
-                    Vestibulum tortor neque, aliquam id ex id, ornare eleifend justo. 
-                    Sed sit amet ultricies velit. In tempor dui at nisi pharetra, in mollis mauris aliquet. 
-                    Integer gravida justo risus, et iaculis mi placerat sit amet. Ut lacus ligula, malesuada nec bibendum vitae, tincidunt at diam. 
-                    Suspendisse potenti. Curabitur suscipit ante a maximus pellentesque. 
-                    Quisque luctus purus mollis eros venenatis egestas.
-                </p>
-            </section>
-        </section>
         <div class="icon">
             <a href="https://wa.me/5551984129881"><img src="./img/pag-home/whatsapp.png" alt="WhatsApp" id="icone_whats"></a>
         </div>
 
+
+
         <!--Carousel com imagens-->
-        <h2 style="text-align:center">Multiple Slideshows</h2>
+        <h2 id="trabalhos-projetos">Nossos trabalhos e Projetos!</h2>
         <p>Slideshow 1:</p>
         <div class="slideshow-container">
             <div class="mySlides1">
@@ -202,13 +160,11 @@ function showError(error)
             <h5>comunicacao.cesmar@maristas.org.br</h5>
             <h5>(51) 3086-2300</h5>
         </section>
-        <button id="voltar-home"><a href="#voltar">Voltar ao topo</a></button>
     </footer>
 
     <!--Script-->
     <script src="./js/link-interativo.js"></script>
     <script src="./js/carousel-automatico.js"></script>
-    <script src="./js/carousel-setas.js"></script>
 
 </body>
 </html>
