Estilização do cadastro do distribuidor

--- a/cadastro-distribuicao.html
+++ b/cadastro-distribuicao.html
@@ -5,50 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/cadastro-distribuidor.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
     <title>Sítio Social</title>
 </head>
 <body>
     <header>
-        <!--cabeçalho-->
+        <a href="./index.html"><img src="./img/cadastros/seta-esquerda-azulclaro.png" alt=""></a>
     </header>
 
     <main>
 
-        <button><a href="./index.html">Voltar para página inicial</a></button>
-
-    <!--formulario-->
-    <h3>Cadastro do coletor</h3>
-        <div class="row">
-            <div class="inputbox">
-                <input type="text" id="nome" required placeholder="Nome completo">
-                <label for="nome">Nome</label>
+    <div class="container-azul-claro">
+            <img src="./img/cadastros/distribuidor.png" id="img-distribuidor">   
+        <!--formulario-->
+        <h3 id="titulo-azul-claro">Distribuidor</h3>
+            <div class="row">
+                <div class="inputbox">
+                    <input type="text" id="input-azul-claro-nome" required placeholder="Nome completo">
+                    <label for="nome" id="label-azul-claro-nome">Nome</label>
+                </div>
+                <div class="inputbox">
+                    <input type="email" id="input-azul-claro-email" required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
+                    <label for="email" id="label-azul-claro-email">Email</label>
+                </div>
+                <div class="inputbox">
+                    <input type="text" id="input-azul-claro-telefone"  required placeholder="(XX)XXXXX-XXXX">
+                    <label for="tel" id="label-azul-claro-telefone">Telefone</label>
+                </div>
+                <div class="inputbox">
+                    <input type="text" id="input-azul-claro-cnpj" required placeholder="XXXX.XXX.XXX/0001-XX">
+                    <label for="cnpj" id="label-azul-claro-cnpj">CNPJ</label>
+                </div>
+                <div class="inputbox">
+                    <label for="disponibilidade" id="label-azul-claro-disponibilidade">Disponibilidade</label>
+                        <select id="disponibilidade-azul-claro" name="disponibilidade">
+                        <option value="frutas">Manhã</option>
+                        <option value="legumes">Tarde</option>
+                        <option value="Ambos">Noite</option>
+                        </select>
+                </div>
             </div>
-            <div class="inputbox">
-                <input type="email" id="email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
-                <label for="email">Email</label>
-                <span id="error-email"></span>
+            <div class="row">
+                <div class="inputbox">
+                    <input type="text" id="input-azul-claro-cep" required placeholder="CEP">
+                    <label for="cep" id="label-azul-claro-cep">CEP</label>
+                </div>
             </div>
-            <div class="inputbox">
-                <input type="text" id="telefone"  required placeholder="(XX)XXXXX-XXXX">
-                <label for="tel">Telefone</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="cnpj" required placeholder="XXXX.XXX.XXX/0001-XX">
-                <label for="cnpj">CNPJ</label>
-            </div>
-            <div class="inputbox">
-                <input type="text" id="disponibilidade" required placeholder="Disponibilidade">
-                <label for="disponibilidade">Disponibilidade</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="inputbox">
-                <input type="text" id="cep" required placeholder="CEP">
-                <label for="cep">CEP</label>
-            </div>
-        </div>
-        
+            <button id="botao-azul-claro"><a href="./index.html">Criar Cadastro</a></button>
+    </div>
     </main>
 
     <footer>
@@ -57,8 +62,7 @@
     </footer>
 
     <!--script-->
-    <script src="./js/cep.js"></script>
-    <script src="./js/email.js"></script>
+    
 
 </body>
 </html>
