Mudando o nome da página

--- a/cadastro-coletor.html
+++ b/cadastro-coletor.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/cadastro-coletor.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <title>Sítio Social</title>
+    <title>AgroHouse</title>
 </head>
 <body>
     <header>
