--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/contato.css">
     <link rel="stylesheet" href="./css/carousel-automatico.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
-    <title>Sítio Social</title>
+    <title>AgroHouse</title>
 </head>
 
 <body>
