--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
   <!--Banner, logo e icones-->
     <header>
-      <img src="./img/pag-home/banner.png" alt="" id="banner">
+      <div id="cabecalho">
+        <img src="./img/pag-home/banner (2).png" alt="" id="banner">
+        <img src="./img/pag-home/logo (2).png" alt="" id="logo">
+        <a href="#"><img src="./img/pag-home/usuario.png" alt="" id="usuario"></a>
+      </div>
     </header>
 
     <main>
@@ -22,14 +26,19 @@
             <a href="https://wa.me/5551984129881"><img src="./img/pag-home/whatsapp.png" alt="WhatsApp" id="icone_whats"></a>
         </div>
 
+        <!--Historia-->
+        <section id="nossa-historia">
+          <h2 id="historia">Nossa História</h2>
+          <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </section>
+
         <!--Carousel-->
         <h2 id="carousel-titulo">Nossos trabalhos e Projetos!</h2>
         <div class="slideshow-container">
           <div class="mySlides1">
-            <img src="./img/pag-home/ajude.png" id="img-ajude">
-            <h1 id="titulo-ajude">Ajude Nos a ajudar</h1>
-            <p id="texto-ajude">Logo após os alimentos serem selecionados e entregues acabam sobrando muitos alimentos em nossas reversa, assim coletamos estes produtos e novamente passamos por uma seleção doamos para pessoas carentes e comunidades necessitadas.
-            </p>
+            <img src="" id="">
           </div>
         
           <div class="mySlides1">
@@ -40,6 +49,14 @@
             <img src="">
           </div>
         
+          <div class="mySlides1">
+            <img src="">
+          </div>
+
+          <div class="mySlides1">
+            <img src="">
+          </div>
+
           <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
           <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
         </div>
@@ -90,7 +107,7 @@
             </div>
 
             <div class="card-login">
-              <img src="./img/pag-home/card-login.png" alt="" id="img-login">
+              <img src="" alt="" id="img-login">
               <h1 id="titulo-login">Doações</h1>
               <p id="texto-login">Aqui nós disponibilizamos para vocês uma ótima qualidade de frutas e verduras.</p>
               <p><button id="cadastro-login"><a href="login.html">Cadastra-se</a></button></p>
