Estruturação da pagina inicial

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/whats.css">
-    <link rel="stylesheet" href="./css/carousel.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="stylesheet" href="./css/home.css">
     <title>AgroHouse</title>
 </head>
 
@@ -18,9 +17,9 @@
   <!--Banner, logo e icones-->
     <header>
       <div id="cabecalho">
-        <img src="" alt="" id="banner">
-        <img src="./img/pag-home/logo (2).png" alt="" id="logo">
-        <a href="#"><img src="./img/pag-home/usuario.png" alt="" id="usuario"></a>
+        <img src="./img/pag-home/banner (2).png" alt="" id="banner">
+        <img src="" alt="" id="logo">
+        <a href="#"><img src="" alt="" id="usuario"></a>
       </div>
     </header>
 
@@ -33,6 +32,7 @@
 
         <!--Historia-->
         <section id="nossa-historia">
+          <img src="./img/pag-home/img-historia.jpeg" alt="">
           <h2 id="historia">Nossa História</h2>
           <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -46,7 +46,6 @@
 
         <div class="mySlides fade">
           <img src="./img/pag-home/carousel1.png" style="width:50%">
-          <div class="titulo">Voluntário</div>
           <div class="text-marrom">Ajude Nos a ajudar</div>
           <div id="conteudo-marrom">Logo após os alimentos serem selecionados e entregues acabam sobrando muitos alimentos em nossas reversa, assim coletamos estes produtos e novamente passamos por uma seleção doamos para pessoas carentes e comunidades necessitadas.
           </div>
@@ -64,7 +63,7 @@
 
         <div class="mySlides fade">
           <img src="./img/pag-home/carousel3.png" style="width:50%">
-          <div class="titulo">Voluntário</div>
+          <div class="titulo">Distribuidor</div>
           <div class="text">Fornecimento alimentar</div>
           <div id="conteudo-azul-fraco">Com mais de 45 variedades de alimentos naturais são distribuídos diariamente para projetos sociais, assim ajudando mais de 63 instituições, 40 orfanatos e 34 projetos sociais, com mais de 200 pessoas que vivem e moram nestes locais.
           </div>
@@ -73,7 +72,7 @@
 
         <div class="mySlides fade">
           <img src="./img/pag-home/carousel4.png" style="width:50%">
-          <div class="titulo">Voluntário</div>
+          <div class="titulo">Produtor</div>
           <div class="text">Nossas inspeções</div>
           <div id="conteudo-verde">Para garantir um melhor produto e 100% natural não utilizamos agrotóxicos em nossas plantações, por conta disso contratamos mais de 30 produtores que fazem a especialização de nossos alimentos garantindo uma melhor qualidade de produtos.
           </div>
@@ -82,7 +81,7 @@
 
         <div class="mySlides fade">
           <img src="./img/pag-home/carousel5.png" style="width:50%">
-          <div class="titulo">Voluntário</div>
+          <div class="titulo">Coletor</div>
           <div class="text">Colheitas</div>
           <div id="conteudo-amarelo">Nossas colheitas são realizadas pelos nossos coletores somente alimentos da estação do ana assim garantido um produto fresco e muito saborosos, Produtores realizam a separação de nossos alimento colhidos, assim garantindo tempo de qualidade do alimento.
           </div>
@@ -99,35 +98,35 @@
             <h2 id="card-titulo">Seja um colaborador de nossos trabalho e Faça a diferença!</h2>
 
             <div class="card">
-              <img src="" alt="" id="img-produtor">
+              <img src="./img/pag-home/card-produtor.png" alt="" id="img-produtor">
               <h1 id="titulo-produtor">Produtor</h1>
               <p id="texto-produtor">Sabedoria em alimentos no geral, conhecer as melhores estações e como se cultivar alimentos</p>
               <p><button id="cadastro"><a href="cadastro-produtores.html">Cadastra-se</a></button></p>
             </div>
 
             <div class="card-distribuidor">
-              <img src="" alt="" id="img-distribuidor">
+              <img src="./img/pag-home/card-distribuidor.png" alt="" id="img-distribuidor">
               <h1 id="titulo-distribuidor">Distribuidor</h1>
               <p id="texto-distribuidor">Os distribuidores oferecem os alimentos recolhidos para pessoas carentes.</p>
               <p><button id="cadastro-distribuidor"><a href="cadastro-distribuicao.html">Cadastra-se</a></button></p>
             </div>
             
             <div class="card-coletor">
-              <img src="" alt="" id="img-coletor">
+              <img src="./img/pag-home/card-coletor.png" alt="" id="img-coletor">
               <h1 id="titulo-coletor">Coletor</h1>
               <p id="texto-coletor">Os coletores selecionam os nossos alimento para que possams ter alimentos de qualidade.</p>
               <p><button id="cadastro-coletor"><a href="cadastro-coletor.html">Cadastra-se</a></button></p>
             </div>
 
             <div class="card-voluntario">
-              <img src="" alt="" id="img-voluntario">
+              <img src="./img/pag-home/card-voluntario.png" alt="" id="img-voluntario">
               <h1 id="titulo-voluntario">Voluntário</h1>
               <p id="texto-voluntario">Se você sonha em ajudar, venha para AgroHouse, assim estará ajudando nossas comunidades mais proximas e se tornará um contribuidor no Projeto.</p>
               <p><button id="cadastro-voluntario"><a href="cadastro-voluntario.html">Cadastra-se</a></button></p>
             </div>
 
             <div class="card-login">
-              <img src="" alt="" id="img-login">
+              <img src="./img/pag-home/card-login.png" alt="" id="img-login">
               <h1 id="titulo-login">Doações</h1>
               <p id="texto-login">Aqui nós disponibilizamos para vocês uma ótima qualidade de frutas e verduras.</p>
               <p><button id="cadastro-login"><a href="login.html">Cadastra-se</a></button></p>
