--- a/login.html
+++ b/login.html
@@ -5,10 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/modal.css">
-
     <title>AgroHouse</title>
 </head>
 <body>
@@ -37,7 +35,7 @@
                     <button type="submit" id="cadastrar" onclick="showModal()">Cadastre-se</button>
                 </section>
 
-                <button id="botao-laranja"><a href="./index.html">Entrar</a></button>
+                <button id="botao-laranja"><a href="./pag-alimento.html">Entrar</a></button>
             </div>
             </div>
         
