--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
       <div id="cabecalho">
         <img src="./img/pag-home/banner (2).png" alt="" id="banner">
-        <img src="" alt="" id="logo">
+        <img src="./img/pag-home/LOGO.png" alt="" id="logo">
         <a href="#"><img src="" alt="" id="usuario"></a>
       </div>
     </header>
@@ -32,65 +32,60 @@
 
         <!--Historia-->
         <section id="nossa-historia">
-          <img src="./img/pag-home/img-historia.jpeg" alt="">
+          <img src="./img/pag-home/img-historia.jpeg" alt="" id="img-historia">
           <h2 id="historia">Nossa História</h2>
-          <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p id="paragrafo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p id="paragrafo">but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
         </section>
 
 
 
         <!--Carousel-->
+        <h2 id="titutlo-carousel">Nossos trabalhos e Projetos!</h2>
         <div class="slideshow-container">
-
         <div class="mySlides fade">
-          <img src="./img/pag-home/carousel1.png" style="width:50%">
+          <img src="./img/pag-home/carousel1.png" id="img-carousel">
           <div class="text-marrom">Ajude Nos a ajudar</div>
           <div id="conteudo-marrom">Logo após os alimentos serem selecionados e entregues acabam sobrando muitos alimentos em nossas reversa, assim coletamos estes produtos e novamente passamos por uma seleção doamos para pessoas carentes e comunidades necessitadas.
           </div>
-          <button id="botao-marrom"><a href="#">Cadastra-se</a></button>
         </div>
 
         <div class="mySlides fade">
-          <img src="./img/pag-home/carousel2.png" style="width:50%">
-          <div class="titulo">Voluntário</div>
-          <div class="text">Tempos de crise</div>
+          <img src="./img/pag-home/carousel2.png" id="img-carousel">
+          <div class="titulo-azul">Voluntário</div>
+          <div class="text-azul">Tempos de crise</div>
           <div id="conteudo-azul">Em tempos de pandemia muitas famílias estavam passando por desemprego e dificuldades financeiras, em vista disso começamos um projeto chamado “Mão amiga”, e o plano era destruir alimentos gratuitamente, ajudamos mais de 500 famílias nesse projeto e 300 moradores de rua.
           </div>
-          <button><a href="#">Cadastra-se</a></button>
+          <button id="botao-azul"><a href="./cadastro-voluntario.html">Cadastra-se</a></button>
         </div>
 
         <div class="mySlides fade">
-          <img src="./img/pag-home/carousel3.png" style="width:50%">
-          <div class="titulo">Distribuidor</div>
-          <div class="text">Fornecimento alimentar</div>
-          <div id="conteudo-azul-fraco">Com mais de 45 variedades de alimentos naturais são distribuídos diariamente para projetos sociais, assim ajudando mais de 63 instituições, 40 orfanatos e 34 projetos sociais, com mais de 200 pessoas que vivem e moram nestes locais.
+          <img src="./img/pag-home/carousel3.png" id="img-carousel">
+          <div class="titulo-azul-claro">Distribuidor</div>
+          <div class="text-azul-claro">Fornecimento alimentar</div>
+          <div id="conteudo-azul-claro">Com mais de 45 variedades de alimentos naturais são distribuídos diariamente para projetos sociais, assim ajudando mais de 63 instituições, 40 orfanatos e 34 projetos sociais, com mais de 200 pessoas que vivem e moram nestes locais.
           </div>
-          <button><a href="#">Cadastra-se</a></button>
+          <button id="botao-azul-claro"><a href="./cadastro-distribuicao.html">Cadastra-se</a></button>
         </div>
 
         <div class="mySlides fade">
-          <img src="./img/pag-home/carousel4.png" style="width:50%">
-          <div class="titulo">Produtor</div>
-          <div class="text">Nossas inspeções</div>
+          <img src="./img/pag-home/carousel4.png" id="img-carousel">
+          <div class="titulo-verde">Produtor</div>
+          <div class="text-verde">Nossas expedição</div>
           <div id="conteudo-verde">Para garantir um melhor produto e 100% natural não utilizamos agrotóxicos em nossas plantações, por conta disso contratamos mais de 30 produtores que fazem a especialização de nossos alimentos garantindo uma melhor qualidade de produtos.
           </div>
-          <button><a href="#">Cadastra-se</a></button>
+          <button id="botao-verde"><a href="./cadastro-produtores.html">Cadastra-se</a></button>
         </div>
 
         <div class="mySlides fade">
-          <img src="./img/pag-home/carousel5.png" style="width:50%">
-          <div class="titulo">Coletor</div>
-          <div class="text">Colheitas</div>
-          <div id="conteudo-amarelo">Nossas colheitas são realizadas pelos nossos coletores somente alimentos da estação do ana assim garantido um produto fresco e muito saborosos, Produtores realizam a separação de nossos alimento colhidos, assim garantindo tempo de qualidade do alimento.
-          </div>
-          <button><a href="#">Cadastra-se</a></button>
+          <img src="./img/pag-home/carousel5.png" id="img-carousel">
+          <div class="titulo-beze">Coletor</div>
+          <div class="text-beze">Colheitas</div>
+          <div id="conteudo-beze">Nossas colheitas são realizadas pelos nossos coletores somente alimentos da estação do ana assim garantido um produto fresco e muito saborosos, Produtores realizam a separação de nossos alimento colhidos, assim garantindo tempo de qualidade do alimento. </div>
+          <button id="botao-beze"><a href="./cadastro-coletor.html">Cadastra-se</a></button>
         </div>
-  
             <a class="prev" onclick="plusSlides(-1)">❮</a>
             <a class="next" onclick="plusSlides(1)">❯</a>
-
+      </div>
 
 
           
@@ -100,44 +95,42 @@
             <div class="card">
               <img src="./img/pag-home/card-produtor.png" alt="" id="img-produtor">
               <h1 id="titulo-produtor">Produtor</h1>
-              <p id="texto-produtor">Sabedoria em alimentos no geral, conhecer as melhores estações e como se cultivar alimentos</p>
-              <p><button id="cadastro"><a href="cadastro-produtores.html">Cadastra-se</a></button></p>
+              <p id="texto-produtor">Sabedoria em alimentos no geral, conhecer as melhores estações e como se cultivar alimentos.</p>
+              <button id="botao-proudtor"><a href="./cadastro-produtores.html" id="link-produtor">Cadastra-se</a></button>
             </div>
 
             <div class="card-distribuidor">
               <img src="./img/pag-home/card-distribuidor.png" alt="" id="img-distribuidor">
               <h1 id="titulo-distribuidor">Distribuidor</h1>
               <p id="texto-distribuidor">Os distribuidores oferecem os alimentos recolhidos para pessoas carentes.</p>
-              <p><button id="cadastro-distribuidor"><a href="cadastro-distribuicao.html">Cadastra-se</a></button></p>
+            <button id="botao-distribuidor"><a href="cadastro-distribuicao.html"  id="link-distribuidor">Cadastra-se</a></button>
             </div>
-            
+
             <div class="card-coletor">
               <img src="./img/pag-home/card-coletor.png" alt="" id="img-coletor">
               <h1 id="titulo-coletor">Coletor</h1>
               <p id="texto-coletor">Os coletores selecionam os nossos alimento para que possams ter alimentos de qualidade.</p>
-              <p><button id="cadastro-coletor"><a href="cadastro-coletor.html">Cadastra-se</a></button></p>
+              <button id="botao-coletor"><a href="cadastro-coletor.html" id="link-coletor">Cadastra-se</a></button>
             </div>
 
             <div class="card-voluntario">
               <img src="./img/pag-home/card-voluntario.png" alt="" id="img-voluntario">
               <h1 id="titulo-voluntario">Voluntário</h1>
               <p id="texto-voluntario">Se você sonha em ajudar, venha para AgroHouse, assim estará ajudando nossas comunidades mais proximas e se tornará um contribuidor no Projeto.</p>
-              <p><button id="cadastro-voluntario"><a href="cadastro-voluntario.html">Cadastra-se</a></button></p>
+              <button id="botao-voluntario"><a href="cadastro-voluntario.html" id="link-voluntario">Cadastra-se</a></button>
             </div>
 
             <div class="card-login">
               <img src="./img/pag-home/card-login.png" alt="" id="img-login">
               <h1 id="titulo-login">Doações</h1>
               <p id="texto-login">Aqui nós disponibilizamos para vocês uma ótima qualidade de frutas e verduras.</p>
-              <p><button id="cadastro-login"><a href="login.html">Cadastra-se</a></button></p>
+              <p><button id="botao-login"><a href="login.html" id="link-login">Cadastra-se</a></button></p>
             </div>
 
 
-
         <!--Mapa-->
-        <section id="mapa">
-          <button id="botao-falso"><a href="#">Mapa</a></button>
-          <img src="./img/pag-home/mapa.svg" alt="" srcset="">
+        <section>
+          <img src="./img/pag-home/mapa.svg" alt="" id="mapa">
         </section>
     </main>
 
@@ -145,14 +138,14 @@
 
       <!--Contato-->
     <footer>
-        <section id="contato">
-            <h5>Estr. Antônio Severino, 1493 - Rubem Berta, Porto Alegre - RS, 91250-330</h5>
-            <h5>comunicacao.cesmar@maristas.org.br</h5>
-            <h5>(51) 3086-2300</h5>
+        <section>
+            <h5 id="endereco">Estr. Antônio Severino, 1493 - Rubem Berta, Porto Alegre - RS, 91250-330</h5>
+            <h5 id="email">comunicacao.cesmar@maristas.org.br</h5>
+            <h5 id="telefone">(51) 3086-2300</h5>
         </section>
 
         <section>
-          <button id="botao-voltar"><a href="#banner">Voltar ao topo</a></button>
+          <button id="botao-voltar"><a href="#banner" id="link-voltar">Voltar ao topo</a></button>
         </section>
     </footer>
 
