Arrumando itens na pagina de login

--- a/login.html
+++ b/login.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <header>
-       <a href="./index.html"><img src="./img/pag-login/seta-esquerda (1).png" alt="" id="volta-pag"></a>
+       <a href="./index.html"><img src="./img/cadastros/seta-esquerda-AMARELO.png" alt="" id="volta-pag"></a>
     </header>
 
     <main>
     <!--formulario-->
     <div id="container-laranja">
-        <img src="./img/pag-login/login.png" alt="" id="img-login">
+        <img src="./img/cadastros/login.png" alt="" id="img-login">
     <h3 id="titulo-laranja">Login</h3>
         <div class="row">
                 <div class="inputbox">
