Pagina de login do administrador pronto

--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                     <button type="submit" id="cadastrar" onclick="showModal()">Cadastre-se</button>
                 </section>
 
-                <button id="botao-laranja"><a href="./pag-alimento.html">Entrar</a></button>
+                <button id="botao-laranja"><a href="./alimentos.html">Entrar</a></button>
             </div>
             </div>
         
