Reajustando elementos na página inicial

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <ul id="usuario" role="menu">
             <li>Login para cliente<a href="./login.html"></a></li>
             <li>Administrador<a href="./login-administrador.html"></a></li>
-            <li>Seu perfil</li>
-            <li>Configurações</li>
+            <li>Colheita<a href="./alimentos.html"></a></li>
+            <li>Voluntário<a href="/cadastro-voluntario.html"></a></li>
         </ul>
     </section>
     </header>
@@ -108,21 +108,21 @@
             <div class="card">
               <img src="./img/pag-home/card-produtor.png" alt="" id="img-produtor">
               <h1 id="titulo-produtor">Produtor</h1>
-              <p id="texto-produtor">Sabedoria em alimentos no geral, conhecer as melhores estações e como se cultivar alimentos.</p>
+              <p id="texto-produtor">Os nossos produtores realizam as INSPEÇÃO de nossos produtos para uma melhor colheita.</p>
               <button id="botao-proudtor"><a href="./cadastro-produtores.html" id="link-produtor">Cadastra-se</a></button>
             </div>
 
             <div class="card-distribuidor">
               <img src="./img/pag-home/card-distribuidor.png" alt="" id="img-distribuidor">
               <h1 id="titulo-distribuidor">Distribuidor</h1>
-              <p id="texto-distribuidor">Os distribuidores oferecem os alimentos recolhidos para pessoas carentes.</p>
+              <p id="texto-distribuidor">Realizam o requesito de produtos, selecionam o alimento para entregas com uma melhor qualidade.</p>
             <button id="botao-distribuidor"><a href="cadastro-distribuicao.html"  id="link-distribuidor">Cadastra-se</a></button>
             </div>
 
             <div class="card-coletor">
               <img src="./img/pag-home/card-coletor.png" alt="" id="img-coletor">
               <h1 id="titulo-coletor">Coletor</h1>
-              <p id="texto-coletor">Os coletores selecionam os nossos alimento para que possams ter alimentos de qualidade.</p>
+              <p id="texto-coletor">Os coletores garantem a entrega de produtos com caminhões e entre outro automóveis.</p>
               <button id="botao-coletor"><a href="cadastro-coletor.html" id="link-coletor">Cadastra-se</a></button>
             </div>
 
@@ -136,7 +136,7 @@
             <div class="card-login">
               <img src="./img/pag-home/card-login.png" alt="" id="img-login">
               <h1 id="titulo-login">Doações</h1>
-              <p id="texto-login">Aqui nós disponibilizamos para vocês uma ótima qualidade de frutas e verduras.</p>
+              <p id="texto-login">Se você está passando por dificuldades alimentares, basta só se se cadastrar para receber nossa ajuda.</p>
               <p><button id="botao-login"><a href="login.html" id="link-login">Cadastra-se</a></button></p>
             </div>
 
@@ -151,7 +151,7 @@
 
       <!--Contato-->
     <footer>
-        <section>
+        <section id="container-contato">
             <h5 id="endereco">Estr. Antônio Severino, 1493 - Rubem Berta, Porto Alegre - RS, 91250-330</h5>
             <h5 id="email">comunicacao.cesmar@maristas.org.br</h5>
             <h5 id="telefone">(51) 3086-2300</h5>
