Removendo links do JS

--- a/cadastro-coletor.html
+++ b/cadastro-coletor.html
@@ -27,7 +27,7 @@
                     <label for="nome" id="label-marrom-nome">Nome</label>
                 </div>
                 <div class="inputbox">
-                    <input type="email" id="input-marrom-email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
+                    <input type="email" id="input-marrom-email"  required placeholder="Email">
                     <label for="email" id="label-marrom-email">Email</label>
                 </div>
                 <div class="inputbox">
