--- a/cadastro-voluntario.html
+++ b/cadastro-voluntario.html
@@ -24,11 +24,11 @@
                 <label for="nome" id="label-azul-nome">Nome</label>
             </div>
             <div class="inputbox">
-                <input type="email" id="input-azul-email"  required placeholder="Email" onblur="validarEmail()" onfocus="redefinirMsg()">
+                <input type="email" id="email"  required placeholder="Email">
                 <label for="email" id="label-azul-email">Email</label>
             </div>
             <div class="inputbox">
-                <input type="text" id="input-azul-telefone"  required placeholder="(XX)XXXXX-XXXX">
+                <input type="text" id="telefone" required placeholder="(XX)XXXXX-XXXX">
                 <label for="tel" id="label-azul-telefone">Telefone</label>
             </div>
             <div class="inputbox">
@@ -56,7 +56,5 @@
     </footer>
 
     <!--script-->
-    
-
 </body>
 </html>
