--- a/login-administrador.html
+++ b/login-administrador.html
@@ -25,7 +25,8 @@
 
                 <div class="inputbox">
                     <label for="senha" id="label-vermelho-senha">Senha</label>
-                    <input type="password" id="password" placeholder="Crie uma senha" required>
+                    <input type="password" id="password" placeholder="Sua uma senha" required>
+                    <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Visualizar senha</h5>
                 </div>
                 <button id="botao-vermelho"><a href="">Entrar</a></button>
             </div>
@@ -35,5 +36,6 @@
     <footer>
     </footer>
 
+    <script src="./js/senha.js"></script>
 </body>
 </html>
