Formulário de entrega de alimentos

--- a/alimentos.html
+++ b/alimentos.html
@@ -227,6 +227,27 @@
         </section>
         <hr id="linha1">
         <hr id="linha2">
+
+        <section id="container-formulario">
+            <div class="inputbox">
+                <label for="instituicao" id="instituicao">Instituição</label>
+                <input type="text" id="instituicao-input" required placeholder="Instituição">
+            </div>
+            <div class="inputbox">
+                <label for="alimento" id="alimento">Alimento</label>
+                <input type="alimento" id="alimento-input"  required placeholder="Alimento">
+            </div>
+            <div class="inputbox">
+                <label for="horario" id="horario">Horário</label>
+                <input type="text" id="horario-input" required placeholder="Horário">
+            </div>
+            <div class="inputbox">
+                <label for="nome" id="nome">Nome</label>
+                <input type="text" id="nome-input" required placeholder="Nome">
+            </div>
+                <button id="reservar-botao">Reservar</button>
+        </section>
+
     </section>
         <section>
             <img src="./img/pag-home/mapa.svg" alt="" id="mapa">
