Mudando frase e estilização do visualizar senha

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                 <div class="inputbox">
                     <label for="senha" id="label-azul-senha">Senha</label>
                     <input type="password" id="password" placeholder="Sua senha" required>
-                    <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Visualizar senha</h5>
+                    <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Ver senha</h5>
                 </div>
                 <a href="#" id ="esqueci-senha">Esqueci a senha </a>
             
