Mudando frase e estilização do visualizar senha

--- a/login-administrador.html
+++ b/login-administrador.html
@@ -26,7 +26,7 @@
                 <div class="inputbox">
                     <label for="senha" id="label-vermelho-senha">Senha</label>
                     <input type="password" id="password" placeholder="Sua uma senha" required>
-                    <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Visualizar senha</h5>
+                    <input type="checkbox" id="visualizar" onclick="myFunction()"><h5>Ver senha</h5>
                 </div>
                 <button id="botao-vermelho"><a href="">Entrar</a></button>
             </div>
