Adicionando texto da nossa história

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="nossa-historia">
           <img src="./img/pag-home/img-historia.jpeg" alt="" id="img-historia">
           <h2 id="historia">Nossa História</h2>
-          <p id="paragrafo">but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+          <p id="paragrafo">Somos uma instituição que administra múltiplos centros sociais. Temos contato diário com população carente de diferentes comunidades. Entre muitas de nossas iniciativas, proporcionamos uma alimentação de qualidade aos necessitados. Temos pontos de contato consolidados, uma vazão grande para doação de alimentos. Nossa ideia é servir como um elo de ligação entre pessoas que dispõe de mais frutas e vegetais do que são capazes de consumir em seu contexto doméstico. </p>
         </section>
 
 
